syntax = "proto3";
package marketdataservice;
import "modelcommon.proto";
import "clobquote.proto";

option go_package="api";


message MdsSubscribeRequest{
    int32 listingId = 1;
}


service MarketDataService {
    rpc Connect(stream MdsSubscribeRequest) returns (stream model.ClobQuote) {};
}
